--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,8 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+
         {
             "type": "firefox",
             "request": "launch",
@@ -12,11 +14,19 @@
             "url": "http://localhost/index.html",
             "webRoot": "${workspaceFolder}"
         },
+
         {
             "type": "firefox",
             "request": "launch",
             "name": "launch"
         },
+        {
+            "type": "firefox",
+            "request": "attach",
+            "name": "Attach"
+        },
+     
+        
         {
             "type": "msedge",
             "request": "launch",
